tests/baselines/reference/collisionThisExpressionAndLocalVarInMethod.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndLocalVarInMethod.ts (2 errors) ====
    class a {
        method1() {
            return {
                doStuff: (callback) => () => {
                    var _this = 2;
                        ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInMethod.ts(5,21): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
                    return callback(this);
                }
            }
        }
        method2() {
            var _this = 2;
                ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInMethod.ts(11,13): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
            return {
                doStuff: (callback) => () => {
                    return callback(this);
                }
            }
        }
    }